// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapScreen matches the locked layout snapshot (no GPS data) 1`] = `
<View
  style={
    {
      "backgroundColor": "#07080A",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "gap": 8,
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
  >
    <Pressable
      hitSlop={12}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <Animated.View
        style={
          [
            undefined,
            {
              "transform": [
                {
                  "scale": {
                    "_v": 1,
                    "value": 1,
                  },
                },
              ],
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            }
          }
        >
          <Icon
            color="#B4BCCC"
            name="ChevronLeft"
            size={16}
            strokeWidth={2}
          />
          <Text
            style={
              {
                "color": "#B4BCCC",
                "fontSize": 15,
                "fontWeight": "600",
                "lineHeight": 22,
              }
            }
          >
            Back
          </Text>
        </View>
      </Animated.View>
    </Pressable>
    <Text
      style={
        {
          "color": "#F7F9FC",
          "fontSize": 32,
          "fontWeight": "700",
          "letterSpacing": -0.6,
          "lineHeight": 38,
          "marginTop": 4,
        }
      }
    >
      Map
    </Text>
    <Text
      style={
        {
          "color": "#B4BCCC",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        }
      }
    >
      0
       plotted
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 24,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "gap": 12,
            "justifyContent": "center",
            "padding": 32,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#191D24",
            "borderRadius": 9999,
            "height": 80,
            "justifyContent": "center",
            "marginBottom": 8,
            "width": 80,
          }
        }
      >
        <Icon
          color="#6366F1"
          name="MapPin"
          size={32}
          strokeWidth={2}
        />
      </View>
      <Text
        style={
          {
            "color": "#F7F9FC",
            "fontSize": 20,
            "fontWeight": "600",
            "letterSpacing": -0.2,
            "lineHeight": 26,
            "textAlign": "center",
          }
        }
      >
        No GPS data yet
      </Text>
      <Text
        style={
          {
            "color": "#B4BCCC",
            "fontSize": 15,
            "fontWeight": "400",
            "lineHeight": 22,
            "maxWidth": 320,
            "textAlign": "center",
          }
        }
      >
        Enable location permission when capturing to plot photos here.
      </Text>
    </View>
  </View>
</View>
`;

exports[`MapScreen matches the locked layout snapshot (populated with markers) 1`] = `
<View
  style={
    {
      "backgroundColor": "#07080A",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "gap": 8,
        "paddingHorizontal": 20,
        "paddingTop": 16,
      }
    }
  >
    <Pressable
      hitSlop={12}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <Animated.View
        style={
          [
            undefined,
            {
              "transform": [
                {
                  "scale": {
                    "_v": 1,
                    "value": 1,
                  },
                },
              ],
            },
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 4,
            }
          }
        >
          <Icon
            color="#B4BCCC"
            name="ChevronLeft"
            size={16}
            strokeWidth={2}
          />
          <Text
            style={
              {
                "color": "#B4BCCC",
                "fontSize": 15,
                "fontWeight": "600",
                "lineHeight": 22,
              }
            }
          >
            Back
          </Text>
        </View>
      </Animated.View>
    </Pressable>
    <Text
      style={
        {
          "color": "#F7F9FC",
          "fontSize": 32,
          "fontWeight": "700",
          "letterSpacing": -0.6,
          "lineHeight": 38,
          "marginTop": 4,
        }
      }
    >
      Map
    </Text>
    <Text
      style={
        {
          "color": "#B4BCCC",
          "fontSize": 15,
          "fontWeight": "400",
          "lineHeight": 22,
        }
      }
    >
      2
       plotted
    </Text>
  </View>
  <ScrollView
    contentContainerStyle={
      {
        "alignItems": "center",
        "padding": 20,
      }
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#12151B",
            "borderColor": "#22272F",
            "borderRadius": 14,
            "borderWidth": 1,
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "height": 320,
            "width": 320,
          },
        ]
      }
    >
      <View
        style={
          {
            "backgroundColor": "#22272F",
            "height": 1,
            "left": 0,
            "opacity": 0.5,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        style={
          {
            "backgroundColor": "#22272F",
            "bottom": 0,
            "left": 0,
            "opacity": 0.5,
            "position": "absolute",
            "top": 0,
            "width": 1,
          }
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#22272F",
              "height": 1,
              "left": 0,
              "opacity": 0.5,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "top": 80,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#22272F",
              "height": 1,
              "left": 0,
              "opacity": 0.5,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "top": 240,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#22272F",
              "bottom": 0,
              "left": 0,
              "opacity": 0.5,
              "position": "absolute",
              "top": 0,
              "width": 1,
            },
            {
              "left": 80,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "#22272F",
              "bottom": 0,
              "left": 0,
              "opacity": 0.5,
              "position": "absolute",
              "top": 0,
              "width": 1,
            },
            {
              "left": 240,
            },
          ]
        }
      />
      <Animated.View
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "position": "absolute",
            },
            {
              "height": 18,
              "left": 17.666666666698244,
              "top": 284.3333333333254,
              "width": 18,
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Pressable
          hitSlop={8}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
        >
          <Animated.View
            style={
              [
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#6366F1",
                    "borderColor": "#07080A",
                    "borderWidth": 2,
                    "justifyContent": "center",
                  },
                  {
                    "borderRadius": 9,
                    "height": 18,
                    "width": 18,
                  },
                ],
                {
                  "transform": [
                    {
                      "scale": {
                        "_v": 1,
                        "value": 1,
                      },
                    },
                  ],
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#07080A",
                  },
                  {
                    "borderRadius": 4.5,
                    "height": 9,
                    "width": 9,
                  },
                ]
              }
            />
          </Animated.View>
        </Pressable>
      </Animated.View>
      <Animated.View
        style={
          [
            {
              "alignItems": "center",
              "justifyContent": "center",
              "position": "absolute",
            },
            {
              "height": 18,
              "left": 284.33333333330177,
              "top": 17.666666666674562,
              "width": 18,
            },
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
          ]
        }
      >
        <Pressable
          hitSlop={8}
          onPress={[Function]}
          onPressIn={[Function]}
          onPressOut={[Function]}
        >
          <Animated.View
            style={
              [
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#6366F1",
                    "borderColor": "#07080A",
                    "borderWidth": 2,
                    "justifyContent": "center",
                  },
                  {
                    "borderRadius": 9,
                    "height": 18,
                    "width": 18,
                  },
                ],
                {
                  "transform": [
                    {
                      "scale": {
                        "_v": 1,
                        "value": 1,
                      },
                    },
                  ],
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#07080A",
                  },
                  {
                    "borderRadius": 4.5,
                    "height": 9,
                    "width": 9,
                  },
                ]
              }
            />
          </Animated.View>
        </Pressable>
      </Animated.View>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#12151B",
          "borderColor": "#22272F",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 8,
          "marginTop": 16,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        }
      }
    >
      <View
        style={
          {
            "backgroundColor": "#6366F1",
            "borderRadius": 5,
            "height": 10,
            "width": 10,
          }
        }
      />
      <Text
        style={
          {
            "color": "#B4BCCC",
            "fontSize": 13,
            "fontWeight": "400",
            "lineHeight": 18,
            "marginRight": 8,
          }
        }
      >
        GPS captured
      </Text>
      <View
        style={
          [
            {
              "backgroundColor": "#6366F1",
              "borderRadius": 5,
              "height": 10,
              "width": 10,
            },
            {
              "backgroundColor": "#191D24",
            },
          ]
        }
      />
      <Text
        style={
          {
            "color": "#B4BCCC",
            "fontSize": 13,
            "fontWeight": "400",
            "lineHeight": 18,
            "marginRight": 8,
          }
        }
      >
        No GPS
      </Text>
    </View>
  </ScrollView>
</View>
`;
